@startuml

title __POPUPS's Class Diagram__\n

  namespace de.dhbw {
    namespace game {
      namespace popups {
        abstract class de.dhbw.game.popups.AMenu {
            - mainLayout : LinearLayout
            - menuLayout : LinearLayout
            + addViewToPopUp()
            + closeWindow()
            + removeViewFromPopUp()
            + setHeader()
            # getMenuLayout()
            # onCreate()
        }
      }
    }
  }
  

  namespace de.dhbw {
    namespace game {
      namespace popups {
        class de.dhbw.game.popups.MenuSettings {
            {static} + gameActivity : GameActivity
            {static} - menuSettingsLayout : LinearLayout
            + finish()
            + initViews()
            + toggle()
            # onCreate()
        }
      }
    }
  }
  

  namespace de.dhbw {
    namespace game {
      namespace popups {
        class de.dhbw.game.popups.MenuTowerSelection {
            {static} + game : Game
            + buildTower()
            + closeWindow()
            + performMoneyUpdate()
            # onCreate()
        }
      }
    }
  }
  

  namespace de.dhbw {
    namespace game {
      namespace popups {
        class de.dhbw.game.popups.MenuUpgradeAndSell {
            {static} + game : Game
            - level : int
            - maxLevel : int
            - towerCost : int
            - towerDamage : int
            - towerDrawable : int
            - towerFireRate : int
            - towerRange : int
            - towerType : String
            - upgradeCost : int
            - upgradeDamage : int
            - upgradeFireRate : int
            - upgradeRange : int
            + initializeView()
            + performMoneyUpdate()
            + sellTower()
            + upgradeTower()
            # onCreate()
        }
      }
    }
  }
  

  de.dhbw.game.popups.AMenu -up-|> android.app.Activity
  de.dhbw.game.popups.MenuSettings .up.|> de.dhbw.game.settings.ISettingsManager
  de.dhbw.game.popups.MenuSettings -up-|> de.dhbw.game.popups.AMenu
  de.dhbw.game.popups.MenuTowerSelection .up.|> de.dhbw.game.IMoneyListener
  de.dhbw.game.popups.MenuTowerSelection -up-|> de.dhbw.game.popups.AMenu
  de.dhbw.game.popups.MenuTowerSelection o-- de.dhbw.util.Position : position
  de.dhbw.game.popups.MenuUpgradeAndSell .up.|> de.dhbw.game.IMoneyListener
  de.dhbw.game.popups.MenuUpgradeAndSell -up-|> de.dhbw.game.popups.AMenu
  de.dhbw.game.popups.MenuUpgradeAndSell o-- de.dhbw.util.Position : pos


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
